--- a/src/Components/HorizontalSectionWithPic/HorizontalSectionWithPic.css
+++ b/src/Components/HorizontalSectionWithPic/HorizontalSectionWithPic.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     gap: 5vw;
-    background-color: #EAD7D7;
+    background-color: #a41034;
+    color: white;
     padding: 5vh;
     max-width: 100vw;
     overflow: hidden;
