--- a/src/Components/TripleTiles/TripleTiles.css
+++ b/src/Components/TripleTiles/TripleTiles.css
@@ -1,21 +1,24 @@
-.dual-tiles
+.triple-cards
 {
     margin: 2% 1%;
     display: flex;
     flex-direction: row;
+    flex-wrap : wrap;
     gap: 1em;
     justify-content: space-evenly;
     height: 30vw;
-
+    max-width: 100vw;
+    background-color: #a41034;
+    overflow: hidden;
 }
 
 
-.triple-tile{
+.single-card{
+    background-color: aliceblue;
     color: black;
     font-size: 4vh;
     width: 30vw;
     height:30vw;
-    display: flex;
     justify-content: center; 
     align-items: center;
     text-align: center;   
@@ -23,19 +26,38 @@
     font-family: "Source Serif 4", serif;
     font-size: 200%;
     font-weight: 600;
-
+    display: flex;
+    flex-direction : row;
+    overflow: hidden;
+    position: relative;
+  
 }
 
-/* .triple-tile > *::after {
+ .single-card img 
+{
+  max-height: 100%;
+  object-fit: cover;
+  object-position : top left;
+} 
+
+.single-card::after {
   content: "";
   position: absolute;
-  inset: 0;
+  inset: 0; 
   background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.9) 0%,  
-    rgba(255, 255, 255, 0.5) 40%,
-    rgba(255, 255, 255, 0.0) 100% 
+    to bottom,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.7) 50%,
+    rgba(0, 0, 0, 0.8) 100%
   );
-  pointer-events: none;
-} */
+  pointer-events: none; 
+}
+
+.link-to-courses
+{
+    position: absolute;
+    word-break: break-word;
+    color : white;
+    z-index: 999;
+}
 
