--- a/src/Pages/CareerOppAndCourseCategories/CareerOppAndCourseCategories.css
+++ b/src/Pages/CareerOppAndCourseCategories/CareerOppAndCourseCategories.css
@@ -1,3 +1,16 @@
+body {
+
+background-color: #a41034;
+}
+
+
+body > *
+{
+max-width : 100vw;
+
+}
+
+
 #homepage-heading {
   position: absolute;
   top: 50%;
@@ -10,7 +23,6 @@
   font-optical-sizing: auto;
   font-weight: 10;
   font-style: normal;
-
   /* 👇 Responsive font size */
   font-size: clamp(1.2rem, 3vw, 3rem);
 }
@@ -27,3 +39,7 @@
 
 }
 
+.tile-container
+{
+  background-color: #a41034;
+}
