--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -149,3 +149,49 @@
   );
   pointer-events: none;
 }
+
+.special-button {
+  background-color: var(--app-bg-color);
+  padding: 1.5% 5%;
+  border-radius: 999px;
+  color: #FFF;
+  text-decoration: none;
+  animation: pulseBg 1.5s infinite;
+  transition: all .5s cubic-bezier(0.23, 1, 0.32, 1);
+  display: inline-block;
+  position: relative;  /* IMPORTANT: creates layer above background */
+  z-index: 2;
+}
+
+@keyframes pulseBg
+{
+  0% {  background-color : var(--app-bg-color); }
+  50% {  background-color : var(--app-bg-color-secondary);}
+  100% {  background-color : var(--app-bg-color-tertiary);}
+}
+
+
+
+.shrink-underline-black {
+  position: relative;
+  display: inline-block; /* IMPORTANT */
+}
+
+
+
+.shrink-underline-black::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%); /* centers underline */
+  bottom: 0; /* sits right below text */
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: width 0.35s ease-out;
+}
+
+
+.shrink-underline-black:hover::after {
+  width: 0;
+}
