--- a/src/Components/CoverSections/TripleTextCover/TripleTextCover.css
+++ b/src/Components/CoverSections/TripleTextCover/TripleTextCover.css
@@ -1,59 +1,70 @@
 .triple-text-cover
 {
-
     background:  var(--app-bg-color) ;
     font-size: 500%;
     font-weight: bold;
-    color : white;
     height: 50vh;
     overflow:hidden;
     display:flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 5%;
-    gap:1%;
+    position: relative;
+    background: black;
+    gap: .5%;
+    height: 45vh;
 }
 
-
-.triple-text-cover-text img
-{
-    width: 33vw;
-
-}
-
-
-
-
-/* 
-
-.only-text-cover-text::before
-{ 
-    
-    background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.6) 0%,
-    rgba(0, 0, 0, 0.7) 50%,
-    rgba(0, 0, 0, 0.8) 100%
-  );
-
-  position: absolute;
-  top: 0;
-left: 0;
-    width: 100%;
-    height: 100%;
-      content: "";
-      z-index: -1;
-}
-*/
-.triple-text-cover-text
+.triple-text-cover-container
 {
     flex:1;
-    z-index: 999;
-    background: var(--app-bg-color) ;
     color:white;
-    font-size: 100%;
     text-align: center;
+    display:flex;
+    font-size: 68%;
+    flex-direction: column;
+    align-items: center;
+    overflow:hidden;
+    justify-content: center;
+    width:33vw;
+    position:relative;
+    
+}
 
+/* .triple-text-cover-container > *
+{
+    width:33vw;
+} */
+
+
+.triple-text-cover-container img {
+    z-index: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.triple-text-cover-container::after {
+    content: "";
+    position: absolute;
+    inset: 0; 
+
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.1) 0%,
+        rgba(0, 0, 0, 0.6) 50%,
+        rgba(0, 0, 0, 0.8) 100%
+    );
+
+    z-index: 1;
+    pointer-events: none;
+}
+
+
+.triple-text-cover-container span
+{
+    z-index: 999;
+    position: absolute;
 
 }
+
