--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,8 @@
   font-optical-sizing: auto;
   font-weight: 10;
   font-style: normal;
+  width: 100vw;
+  max-width: 100vw;
 
   /* 👇 Responsive font size */
   font-size: clamp(1.2rem, 3vw, 3rem);
@@ -108,6 +110,7 @@
   justify-content: space-evenly;
   background-color: var(--app-bg-color);
   height: 100vh; /* ✅ makes the section fill the entire viewport height */
+  max-width: 100vw;
 }
 
 #homepage-image > * {
