--- a/src/Components/CourseDetail/CourseDetail.css
+++ b/src/Components/CourseDetail/CourseDetail.css
@@ -1,11 +1,11 @@
 main {
   /* background-color:  #8D021F; */
-  color: black;
+  /* color: black; */
   /* padding: 5vh; */
 
 }
 
-
+/* 
 header
 {
     text-align: center;
@@ -15,13 +15,13 @@ header
     background-color:#EAD7D7;
     padding: 5vh;
     width: 100vw;
-    justify-content: center; /* horizontal alignment */
-    align-items: center;     /* 🔥 vertical alignment */
+    justify-content: center;
+    align-items: center;   
     
 }
 
 header > * {
-    width: 50vw;          /* fixed width for each item */
+    width: 50vw;       
     text-align: center;
 }
 
@@ -30,52 +30,4 @@ header h2{
 
     text-align: right;
 }
-
-#summary
-{
-    display: flex;
-    direction: row;
-    gap: 10vw;
-}
-
-iframe{
-
-    height: 50vh;
-    width: 50vw;
-}
-
-#summary-description
-{
-    text-align: left;
-}
-
-#summary-grid
-{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 5vw;
-
-}
-
-#summary-grid-item {
-  align-items:center;
-  font-size:3.5vh;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-
-#mahasamvit-edu-course-syllabus-action
-{
-
-
-
-}
-
-
-#mahasamvit-edu-course-action
-{
-     padding: 5vh;
-    background-color: #8D021F;
-    color:#FFF;
-    text-align: center;
-}
+ */
