--- a/src/Components/CourseSummary/CourseSummary.css
+++ b/src/Components/CourseSummary/CourseSummary.css
@@ -1,3 +1,18 @@
+.course-summary
+{
+
+    background : #EAD7D7;
+    width: 100vw;
+    display:flex;
+    flex-direction:column;
+}
+
+.header-section
+{
+    padding: 0.5vh 1vw;
+    font-size: 300%;
+    font-weight: bold;
+}
 
 .specific-career-opprtunity-container {
 
@@ -14,11 +29,10 @@
     -webkit-backdrop-filter: blur(50px); 
 }
 
-p
+.summary p
 {
     text-align: center;
-    font-size: 2em;
-    font-weight : bold;
+    font-size: 1em;
 }
 
 .specific-career-opprtunity-heading
@@ -27,16 +41,16 @@ p
     height: 7vh;
     gap : 30vw;
     justify-content: space-between;
-    align-items: center;
-    padding : 0vh 15vw;
-    margin-top: 7vh ;
+    /* align-items: center; */
+    /* padding : 0vh 15vw; */
+    /* margin-top: 7vh ; */
     white-space: nowrap;
 }
 
 .specific-career-opprtunity-list
 {
 
-    padding : 2vh 15vw;
+    /* padding : 2vh 15vw; */
     color: white;
 
     display: flex;
@@ -58,7 +72,7 @@ p
     width : 20vw;
     height: 10vh;
     background-color: black;
-    margin: 1vh;
+    /* margin: 1vh; */
     font-size: 2em;
     text-align : center;
     justify-content: center;
@@ -86,23 +100,70 @@ p
 
 }
 
-
 .specific-career-opprtunity-media
 {
-    flex:1;
+    display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height:100%;
-    aspect-ratio: 16 / 9;
+
+    width: 100vw;
+    max-width: 100vw;
+    padding: 2vw;
+    overflow: hidden;
+
+    /* aspect-ratio: 16 / 9; */
     
 
  }
 
+
 iframe{
 
     height: 100%;
-    width: 100%;
     border-radius: 8px;
 
 }
+
+
+#summary
+{
+    display: flex;
+    direction: column;
+    gap: 10vw;
+    overflow: hidden;
+
+}
+
+iframe{
+
+    height: 50vh;
+    width: 50vw;
+    flex: 1;
+}
+
+#summary-description
+{
+    text-align: left;
+}
+
+#summary-grid
+{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5vw;
+
+}
+
+#summary-grid-item {
+  display:flex;
+  direction:column;
+  align-items:center;
+  justify-content: center;
+  /* transition: transform 0.2s ease, box-shadow 0.2s ease; */
+  font-weight : bold;
+}
+.course-summary-action
+{
+    text-align :center;
+}
+
