--- a/src/Components/HorizontalSectionWithPic/HorizontalSectionWithPic.css
+++ b/src/Components/HorizontalSectionWithPic/HorizontalSectionWithPic.css
@@ -6,6 +6,7 @@
     gap: 5vw;
     background-color: #a41034;
     color: white;
+    margin-top: 20vh 0;
     padding: 5vh;
     max-width: 100vw;
     overflow: hidden;
