--- a/src/Components/SingleTilePic/SingleTilePic.css
+++ b/src/Components/SingleTilePic/SingleTilePic.css
@@ -2,7 +2,7 @@
 
 .single-horizontal-tile{
     color: var(--app-font-color-white);
-    font-size: 4vh;
+    /* font-size: 4vh; */
     width: 99vw;
     height:30vw;
     background: #a41034;
@@ -55,6 +55,6 @@
     padding :0 20px;
 }
 
-p {
+ p {
      padding :0 20px;
-}
+} 
