added contact Us page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 :root {
   --app-bg-color: #800000;
+  --app-bg-color-2: #c92121;
   --app-bg-color-secondary: #c53333;
   --app-bg-color-tertiary: #914141; 
   --app-font-color-white: white;
