--- a/src/Components/TripleTiles/TripleTiles.css
+++ b/src/Components/TripleTiles/TripleTiles.css
@@ -35,6 +35,8 @@
 
  .single-card img 
 {
+
+  height:100%;
   max-height: 100%;
   object-fit: cover;
   object-position : top left;
@@ -58,6 +60,7 @@
     position: absolute;
     word-break: break-word;
     color : white;
-    z-index: 999;
+    z-index: 1;
+    cursor: pointer;
 }
 
