--- a/src/Components/AskAQuestion/AskAQuestion.css
+++ b/src/Components/AskAQuestion/AskAQuestion.css
@@ -4,6 +4,8 @@
     gap:5%;
     justify-content: space-evenly;
     margin: 5% 5%;
+    max-height: 95%;
+    
 }
 
 .ask-qs-personal-details
@@ -11,6 +13,7 @@
     display:flex;
     flex-direction: column;
     gap:5%;
+    justify-content: space-between;
     
 }
 
@@ -21,38 +24,75 @@
     padding-left: 4%;
     border: none;
     resize: none;
-    background-color: var(--app-bg-color-secondary);
-    color: var(--app-bg-color);
+    /* background-color: var(--app-bg-color-secondary); */
+    /* color: var(--app-bg-color); */
     outline: none;
-    color: white;
+    color : var(--app-bg-color);
     height: 12%;
-}
+    background-color: var(--app-bg-color-2)
+
+}g
+
+
+
+/* .ask-qs-msg-section > *
+{
+    border-radius: 10px;
+    outline: none; 
+    border: none;
+} */
 
 .ask-qs-msg-section
 {
     display:flex;
     flex-direction: column;
-    gap:6%;
-    background-color: var(--app-bg-color-secondary);
-    /* color: white; */
+    justify-content: space-evenly;
+    /*align-items: center; */
+
 }
 
-/* .ask-qs-msg-section > *
+.ask-qs-msg-section > *
 {
-    border-radius: 10px;
-    /* outline: none; */
-    border: none;
-} */
+        width: 100%;
+        box-sizing: border-box;
+        margin-bottom:.5%;
+}
 
-.ask-qs-msg-subject
+.ask-qs-subject
 {
     height: 12%;
+    border-radius: 999px;
+    padding: 3.5%;
+    padding-left: 4%;
+    border: none;
+    /* margin-bottom: 1%; */
+    max-height: 12%;
+    color : var(--app-bg-color);
+
 
 }
 
 .ask-qs-textarea
 {
-     
     padding: 3%;
     outline: none;
+    border-radius: 10px;
+    display : block;
+    width: 100%;
+    color : var(--app-bg-color);
+    /* margin-bottom: 1%; */
+    resize: none;
+
+}
+
+.ask-qs-send-button
+{
+     /* min-width: 100%; */
+    color : var(--app-bg-color);
+    background-color: black;
+    font-size: 120%;
+    font-weight:bold;
+
+    
+
 }
